<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Activities.AlertMode"
    android:background="@color/lightred">

    <Button
        android:id="@+id/btn_deactivate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deactivate"
        android:theme="@style/Button.Link" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_location"
        android:padding="10dp"
        android:textStyle="bold"/>

    <fragment
        android:id="@+id/myMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_emergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergency"
        android:layout_marginTop="20sp"
        android:padding="30dp"
        android:textColor="@color/white"
        android:theme="@style/Button.DarkRed"/>
    <TextView
        android:id="@+id/CheckInTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:padding="10dp"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/btn_checkin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_check_in_time"
        android:theme="@style/Button.Yellow"/>



</LinearLayout>