<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:theme="@style/MainTheme">

<!--logout button-->

    <!--    greeting message-->
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:theme="@style/Button.Yellow"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">
        <TextView
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/hello" />
        <TextView
            android:id="@+id/usernameDisplay"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username" />

    </LinearLayout>

    <!--alert button-->
    <ImageButton
        android:id="@+id/btn_alert"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/alertbutton"
        android:contentDescription="TODO"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activate_alert"
        android:textSize="25sp"
        android:layout_marginBottom="30dp"/>

    <!--logout button-->
    <Button
        android:id="@+id/btn_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Button.Link"
        android:text="@string/manage_emergency_contacts" />

</LinearLayout>