<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:theme="@style/MainTheme">

    <Button
        android:id="@+id/btn_goHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Button.Link"
        android:gravity="start"
        android:text="@string/home" />

    <TextView
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergency_contacts" />

    <Button
        android:id="@+id/btn_addContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Button.Link"
        android:text="@string/add_contacts" />

    <!-- Add RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/contactitem"/>

</LinearLayout>